--- a/lodspeakr/components/services/showDataset/html.template
+++ b/lodspeakr/components/services/showDataset/html.template
@@ -150,7 +150,11 @@ id: "id_{{i.row.value}}",
 
 <script src="{{lodspk.home}}js/editor.js"></script>
 <script>
-Editor.init();
+
+config = {
+  sortcol: "{{first.header.val.value|slugify}}"
+}
+Editor.init(config);
 Editor.showTable();
 </script>
 </body>
