--- a/lodspeakr/components/types/local_vocab:MapVisualization/html.template
+++ b/lodspeakr/components/types/local_vocab:MapVisualization/html.template
@@ -1,8 +1,39 @@
 {%include "../../includes/header.inc"%}
     <div class="container-fluid">
     <h1>{{first.main.title.value}}</h1>
+    <div id="metadata" style="float:right;" class="well" about="{{uri}}">
+      <h4>Metadata</h4>
+      <hr/>
+      <div>
+       <strong>Creation Date:</strong>
+       <span property="http://purl.org/dc/terms/created">{{first.main.creationdate.value}}</span>
+      </div>
+      <div>
+        <strong>Parameters:</strong>
+        <div>
+         <strong>Longitude:</strong> "<span>{{first.params.paramX.value}}</span>"
+        </div>
+        <div>
+         <strong>Latitude:</strong> "<span>{{first.params.paramY.value}}</span>"
+        </div>
+      </div>
+      <hr/>
+      <div>
+       <strong>Dataset used:</strong>
+       <span><a rel="http://www.w3.org/ns/prov#wasDerivedFrom" href="{{first.main.dataset.value}}">{{first.main.dataset.value|explode:"/"|pop}}</a></span>
+      </div>
+      <div>
+       <strong>Obtained from:</strong>
+       <span about="{{first.main.dataset.value}}">
+       <a rel="http://www.w3.org/ns/dcat#distribution" href="{{first.main.original.value}}">{{first.main.original.value}}</a></span>
+      </div>
+      <div>
+       <strong>Downloaded at:</strong>
+       <span about="{{first.main.dataset.value}}" property="dcterms:created"> {{first.main.datasetdate.value}}</span>
+      </div>
+    </div>
     <div id="mapContainer" class="vizContainer"></div>
-    
+
     <div class="modal hide fade" id="error-dialog">
   <div class="modal-header">
     <h3>Error</h3>
@@ -26,6 +57,7 @@ var config = {
          lat: "{{first.params.paramY.value}}",
          lon: "{{first.params.paramX.value}}",
       },
+      sortcol: "{{first.params.sort.value}}",
       readonly: true,
       manualdata: true
     };
