--- a/lodspeakr/components/types/local_vocab:ColumnChartVisualization/html.template
+++ b/lodspeakr/components/types/local_vocab:ColumnChartVisualization/html.template
@@ -60,6 +60,7 @@ var config = {
          var2: "{{first.params.paramY.value}}",
       },
       sortcol: "{{first.params.sort.value}}",
+      filter: [ {searchString: "{{first.params.filterValue.value}}"}],
       readonly: true,
       manualdata: true
     };
