--- a/lodspeakr/components/types/local_vocab:MapVisualization/html.template
+++ b/lodspeakr/components/types/local_vocab:MapVisualization/html.template
@@ -1,7 +1,7 @@
 {%include "../../includes/header.inc"%}
     <div class="container-fluid">
     <h1>{{first.main.title.value}}</h1>
-    <div id="metadata" style="float:right;max-width:500px;" class="well" about="{{uri}}">
+    <div id="metadata" style="float:right;min-width:300px;max-width:500px;" class="well" about="{{uri}}">
       <h4>Metadata</h4>
       <hr/>
       <div>
@@ -49,6 +49,8 @@
 </div>        
 <script src="{{lodspk.home}}js/editor.js"></script>
 <script>
+
+$(function(){
 var searchField = "{{first.params.filterColumn.value}}";
 
 var config = {
@@ -67,19 +69,19 @@ var config = {
 
 
 var data = [];
-{%for i in models.rows%}
-{%ifchanged i.row.value%}{%if !forloop.first%}
-};
-{%endif%}
-data[{{i.row.value}}] = {
-id: "id_{{i.row.value}}",
-{%endifchanged%}  {{i.headerValue.value|slugify}}: "{{i.val.value}}",    {%endfor%}
-};
-
-Editor.setData(data);
+$.ajax({
+  url: "{{first.params.dataset.value}}",
+  dataType: "json",
+  success: function(d){
+    data = d.rows;
+    console.log(data);
+   Editor.setData(data);
 console.log(data, Editor.dataSelection);
 Editor.renderMap(config);
 
+  }
+})
+})
 </script>
 </body>
 </html>
