Fixed bug filling selects when multiple datasets are present.
not indicating sorted by when it doesn't exist

--- a/lodspeakr/components/services/showDataset/html.template
+++ b/lodspeakr/components/services/showDataset/html.template
@@ -187,7 +187,7 @@ function createEditor(config){
       config.data = d.rows;
       config['sortcol'] = config.headerColumns[0];
       i = datasetEditors.length;
-      datasetEditors[i] = Editor;
+      datasetEditors[i] = new Editor;
       datasetEditors[i].init(config);
       datasetEditors[i].showTable();
     }    
